# x8

./: .gitignore  Cargo.toml  README.md
src/: instruction.rs  main.rs  registers.rs  vm.rs
