[package]
name = "x8"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield-struct = "0.8.0"
clap = { version = "4.5.11", features = ["derive"] }
hex = "0.4.3"
hexdump = "0.1.2"
paste = "1.0.15"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["serde_derive"] }
strum = { version = "0.26.3", features = ["derive"] }
